refined the UI